force-app/main/default/objects/bre__BR_Participation__c/bre__BR_Participation__c.object-meta.xml
<CustomObject>
    <label>AC Participation</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>