force-app/main/default/objects/bre__BR_Participation__c/fields/bre__BR_Event__c.field-meta.xml
<CustomField>
    <fullName>bre__BR_Event__c</fullName>
    <label>BR Event</label>
    <referenceTo>bre__BR_Event__c</referenceTo>
    <relationshipLabel>AC Participations</relationshipLabel>
    <relationshipName>BR_Participations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>