force-app/main/default/objects/bre__BR_Participation__c/fields/bre__Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>bre__Event_Start_Date__c</fullName>
    <formula>bre__BR_Event__r.bre__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>DateTime</type>
</CustomField>