force-app/main/default/objects/bre__BR_Participation__c/fields/bre__Lead__c.field-meta.xml
<CustomField>
    <fullName>bre__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Participations</relationshipLabel>
    <relationshipName>Participations</relationshipName>
    <type>Lookup</type>
</CustomField>