force-app/main/default/objects/bre__BR_Participation__c/fields/bre__LeadName__c.field-meta.xml
<CustomField>
    <fullName>bre__LeadName__c</fullName>
    <formula>TEXT(bre__Lead__r.Salutation) &amp; &quot; &quot; &amp; bre__Lead__r.FirstName &amp; &quot; &quot; &amp; bre__Lead__r.LastName</formula>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>