force-app/main/default/objects/bre__BR_Participation__c/fields/bre__Participate__c.field-meta.xml
<CustomField>
    <fullName>bre__Participate__c</fullName>
    <label>Participate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>