force-app/main/default/objects/bre__BR_Participation__c/fields/bre__User__c.field-meta.xml
<CustomField>
    <fullName>bre__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BR_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>